# ormy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
ormwtf/: __version__.py
ormwtf/base/: __init__.py  abc.py  error.py  func.py  generic.py  pydantic.py  typing.py
ormwtf/base/abc/: __init__.py  abstract.py  config.py  document.py  extension.py
ormwtf/extension/meilisearch/: __init__.py  config.py  provider.py  schema.py  wrapper.py
ormwtf/extra/: mongo.py
ormwtf/service/clickhouse/: __init__.py  config.py  migrations.py  wrapper.py
ormwtf/service/firestore/: __init__.py  config.py  wrapper.py
ormwtf/service/mongo/: __init__.py  config.py  typing.py  wrapper.py
ormwtf/service/redis/: config.py  wrapper.py
ormwtf/utils/: io.py  logging.py
ormwtf/utils/auth/: __init__.py  firebase.py  func.py
ormy/: __version__.py  exceptions.py
ormy/_abc/: abstract.py  config.py
ormy/addon/: aiocache.py
ormy/base/: __init__.py  error.py  generic.py  pydantic.py  typing.py
ormy/base/abc/: __init__.py  abstract.py  config.py  document.py  extension.py  func.py  registry.py  table.py  typing.py
ormy/boilerplate/: arango.py  mongo.py  redis.py
ormy/document/arango/: wrapper.py
ormy/document/extensions/meilisearch/: config.py  wrapper.py
ormy/document/extensions/rabbitmq/: wrapper.py
ormy/document/extensions/redlock/: wrapper.py
ormy/document/extensions/s3/: wrapper.py
ormy/document/firestore/: config.py  wrapper.py
ormy/document/mongo/: wrapper.py
ormy/document/redis/: wrapper.py
ormy/extension/meilisearch/: __init__.py  config.py  schema.py  wrapper.py  wrapper_new.py
ormy/extension/rabbitmq/: config.py  wrapper.py
ormy/extension/redlock/: __init__.py  config.py  wrapper.py  wrapper_custom.py
ormy/extension/s3/: config.py  schema.py  wrapper.py
ormy/extra/: mongo.py
ormy/service/arango/: config.py  wrapper.py
ormy/service/bigquery/: config.py  wrapper.py
ormy/service/clickhouse/: __init__.py  config.py  database.py  func.py  migrations.py  models.py  wrapper.py  wrapper_new.py
ormy/service/firestore/: config.py  wrapper.py  wrapper_new.py
ormy/service/mongo/: __init__.py  config.py  wrapper.py  wrapper_single.py
ormy/service/redis/: __init__.py  config.py  wrapper.py  wrapper_new.py
ormy/table/bigquery/: config.py  wrapper.py
ormy/table/clickhouse/: database.py  migrations.py  wrapper.py
ormy/utils/: io.py  logging.py
ormy/utils/auth/: __init__.py  firebase.py  generic.py
tests/: run.sh
tests/base/: test_func.py
tests/bash/: init-replica-set.sh
tests/compose/: docker-compose.yml
tests/compose/firebase-emulator/: Dockerfile
tests/firebase-emulator/: Dockerfile
tests/firebase-emulator/firebase/: firebase.json
tests/ormwtf/base/: test_abc.py  test_func.py  test_pydantic.py
tests/ormwtf/extension/: test_meilisearch_mongo.py
tests/ormwtf/service/: test_firestore.py  test_mongo.py  test_redis.py
tests/ormy/base/: test_func.py  test_pydantic.py
tests/ormy/extension/: test_meilisearch_mongo.py
tests/ormy/service/: test_firestore.py  test_mongo.py  test_redis.py
