[tool.poetry]
name = "ormwtf"
version = "0.1.1-pre.20+5f771b5"
description = "Python ORM wrappers"
authors = ["Lev Litvinov <misery7100@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
redis = "<5.0.0"
pydantic = "^2.8.2"
pymongo = "^4.8.0"
motor = "^3.5.1"
pydantic-settings = "^2.4.0"
pendulum = "^3.0.0"
firebase-admin = "^6.5.0"
bcrypt = "^4.2.0"
meilisearch-python-sdk = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
tox = "^4.18.0"
mypy = "^1.11.1"
ruff = "^0.6.2"
pytest-xdist = "^3.6.1"
types-redis = "^4.6.0.20240819"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
latest-tag = true
bump = "auto"

[tool.poetry-dynamic-versioning.files."ormwtf/__version__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
