[tool.poetry]
name = "ormy"
version = "0.1.5-pre.1+e4a35cd"
description = "Python ORM wrappers"
authors = ["Lev Litvinov <misery7100@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10,<3.12"
pydantic = "^2.8.2"
pendulum = "^3.0.0"
bcrypt = "^4.2.0"
camel-converter = "^3.1.2"
pyyaml = "^6.0.2"
backoff = "^2.2.1"
anyio = "^4.8.0"

redis = {version = "<5.0.0", optional = true}
pymongo = {version = "^4.9.0", optional = true}
motor = {version = "^3.6.0", optional = true}
firebase-admin = {version = "^6.5.0", optional = true}
meilisearch-python-sdk = {version = "^3.2.0", optional = true}
infi-clickhouse-orm = {version = "^2.1.3", optional = true}
google-cloud-bigquery = {version = "^3.26.0", optional = true}
boto3 = {version = "^1.35.90", optional = true}
aiocache = {version = "^0.12.3", optional = true}
aio-pika = {version = "^9.5.4", optional = true}
pika = {version = "^1.3.2", optional = true}
botocore-stubs = {version = "^1.36.12", optional = true}
boto3-stubs = {extras = ["full"], version = "^1.36.12", optional = true}
python-arango = {version = "^8.1.4", optional = true}
msgspec = {version = "^0.19.0", optional = true}

[tool.poetry.extras]
msgspec = ["msgspec"]
mongo = ["pymongo", "motor"]
rabbitmq = ["pika", "aio-pika"]
redis = ["redis"]
cache = ["aiocache", "redis"]
bigquery = ["google-cloud-bigquery"]
clickhouse = ["infi-clickhouse-orm"]
arango = ["python-arango"]
firestore = ["firebase-admin"]
meilisearch = ["meilisearch-python-sdk"]
s3 = ["boto3", "botocore-stubs", "boto3-stubs"]
all = ["pymongo", "motor", "pika", "aio-pika", "redis", "aiocache", "google-cloud-bigquery", "infi-clickhouse-orm", "python-arango", "firebase-admin", "meilisearch-python-sdk", "boto3", "botocore-stubs", "boto3-stubs", "msgspec"]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
tox = "^4.18.0"
mypy = "^1.11.1"
ruff = "^0.6.2"
types-redis = "^4.6.0.20240819"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
types-pyyaml = "^6.0.12.20240808"
types-pytz = "^2024.1.0.20240417"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
latest-tag = true
bump = "auto"

[tool.poetry-dynamic-versioning.files."ormy/__version__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
